# HelloAgents

./: README.md
1_LongStoryWriter/: .env.example  .gitignore  README.md  README_Chinese.md  langgraph.json  pyproject.toml  requirements.txt
1_LongStoryWriter/notebook/: notebook_ChineseStory.ipynb  notebook_EnglishStory.ipynb
1_LongStoryWriter/src/Chinese_Story/: graph.py  prompts.py  state.py
1_LongStoryWriter/src/English_Story/: __init__.py  graph.py  prompts.py  state.py
2_SlidesTranslator/: .gitignore  README.md  README_Chinese.md  app.py  graph.py  models.py  requirements.txt  utils.py
2_SlidesTranslator/prompts/: translation_instruction.txt
2_SlidesTranslator/template/BlankDesign/: English_ShenzhenPopulationFlowAnalysis.pptx  Japanese_ShenzhenPopulationFlowAnalysis.pptx  Korean_ShenzhenPopulationFlowAnalysis.pptx  ShenzhenPopulationFlowAnalysis.pptx
