[project]
name = "1-longstorywriter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain==1.0.3",
    "langchain-core==1.0.5",
    "langchain-deepseek==1.0.1",
    "langgraph==1.0.2",
    "langgraph-api==0.3.1",
    "langgraph-cli==0.3.8",
    "langgraph-runtime-inmem==0.8.1",
    "langgraph-sdk==0.2.3",
    "pydantic==2.11.7",
    "python-dotenv>=1.2.1",
]
